# vh_reader

./: .gitignore  Cargo.toml  README.md  fch.bt  fwl.bt  mdb.bt
assets/data/: compendium_recipes.txt  property_names.txt
templates/: LICENSE-MIT  character.md  fch.bt  fwl.bt  mdb.bt  readme.md  world.md
vhr_chardata/: Cargo.toml
vhr_chardata/src/: character.rs  color.rs  data.rs  hair.rs  inventory.rs  lib.rs  map.rs  prelude.rs  skill.rs  vis_data.rs
vhr_chardata/src/data/: inventory.rs  vis_data.rs
vhr_datatypes/: Cargo.toml  readme.md
vhr_datatypes/assets/: known_strings.txt
vhr_datatypes/src/: character.rs  common.rs  data.rs  entity.rs  food.rs  key.rs  lib.rs  map.rs  player.rs  prelude.rs  primatives.rs  wrappers.rs
vhr_datatypes/src/character/: character_data.rs  food.rs  mini_map.rs  profile.rs  version_enum.rs
vhr_datatypes/src/common/: biome.rs  bw_image.rs  color.rs  compressed_wrapper.rs  food.rs  gender.rs  hair.rs  inventory.rs  known_size.rs  position.rs  skill.rs  square_integer.rs  square_vec.rs  wrapper.rs
vhr_datatypes/src/data/: biome.rs  color.rs  hair.rs  inventory.rs  position.rs  skill.rs  square_vec.rs  vis_data.rs
vhr_datatypes/src/map/: hashed_string.rs  properties.rs
vhr_datatypes/src/primatives/: biome.rs  color.rs  gender.rs  hair.rs  skill.rs  time.rs  translation.rs
vhr_datatypes/src/wrappers/: bw_image.rs  compressing.rs  hashed_string.rs  hashing.rs  nested_data.rs  string_data.rs  versioning.rs  wrapper.rs
vhr_datatypes/src/wrappers/versioning/: character.rs  inventory.rs  mini_map.rs  player.rs  skills.rs
vhr_egui/: Cargo.toml
vhr_egui/src/: app.rs  lib.rs  main.rs
vhr_gui/: Cargo.toml  readme.md
vhr_gui/src/: lib.rs  main.rs
vhr_map/: Cargo.toml
vhr_map/src/: main.rs
vhr_open/: Cargo.toml
vhr_open/src/: main.rs
vhr_serde/: Cargo.toml  readme.md
vhr_serde/src/: de.rs  error.rs  lib.rs  ser.rs
