[package]
name = "vhr_datatypes"
version = "0.1.0"
authors = ["Daniel Boyle <boylede+github@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_repr = "0.1"
serde_bytes = "0.11"
vhr_serde = {path="../vhr_serde/"}
lazy_static = "1.4.0"
flate2 = "1.0"
sha2 = "0.9.8"
