[package]
name = "vhr_datatypes"
version = "0.1.0"
authors = ["Daniel Boyle <boylede+github@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An implementation of the data/file structures used in the computer game Valheim"
homepage = "https://github.com/boylede/vh_reader"
repository = "https://github.com/boylede/vh_reader"
readme = "readme.md"
keywords = ["gamedev", "serde", "library"]
categories = ["data-structures"]

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_repr = "0.1"
serde_bytes = "0.11"
vhr_serde = {version = "0.1.0", path="../vhr_serde/"}
lazy_static = "1.4.0"
flate2 = "1.0"
sha2 = "0.9.8"
base64 = "0.13.0"