[package]
name = "vhr_egui"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A GUI application for reading and editing Valheim savegame character files"
homepage = "https://github.com/boylede/vh_reader"
repository = "https://github.com/boylede/vh_reader"
readme = "readme.md"
keywords = ["gamedev"]
categories = ["command-line-utilities", "games"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "vhr_gui_desktop"
path = "src/main.rs"

[dependencies]
eframe = "0.14.0"
serde = { version = "1", features = ["derive"], optional = true }
rfd = "0.5.0"
vhr_datatypes = {path = "../vhr_datatypes"}
vhr_serde = {path = "../vhr_serde"}
image = {version="0.23"}